--- a/Echange/beans/lang_en.properties
+++ b/Echange/beans/lang_en.properties
@@ -1,23 +1,14 @@
-label.entry.welcome=Welcome to Antilles excurcion simulator
-label.entry.offer=choose your offer parameters
-label.entry.search=choose your request parameters
+label.entry.welcome=Bienvenue sur notre simulateur d'offre 
+label.entry.offer=Choisissez  vos  parametres d'offre
+label.entry.search=Choisissez  vos  parametres de recherche
 
 
-label.entry.day=journey duration :
-label.entry.key=keyword :
-label.entry.min=Minimum  cost :
-label.entry.max=Maximum  cost :
-label.entry.intensity=Travel intensity :
-label.entry.type=Excursion type :
-label.entry.patience=Client patience time \: 
+label.entry.day=Durée du voyage :
+label.entry.key=Mots clés :
+label.entry.min=Coût minimum :
+label.entry.max=Coût maximum :
+label.entry.intensity=Rythme du voyage :
+label.entry.type= Type d'excursion:
 
 label.entry.simulate=Start Simulation
 
-label.result.title=Simulation statistic results
-
-label.result.served=Served client count \: 
-label.result.nonServed=Non-Served client count \:  
-label.result.waiting=Average client waiting time \:  
-label.result.service=Average client service time \: 
-label.result.occupation=Cashier occupation rate \:  
-label.result.satisfaction=Client satisfaction rate \:  
